<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/topToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="46dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        android:background="@color/toolbar_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/creatify_logo"
            android:scaleType="fitCenter"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logo"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/accent"
            android:includeFontPadding="false"/>

        <ImageButton
            android:id="@+id/btnBackground"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/background"
            android:src="@drawable/ic_background"
            android:scaleType="fitCenter"
            android:padding="10dp"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:id="@+id/btnMenu"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/menu"
            android:src="@drawable/ic_more"
            android:scaleType="fitCenter"
            android:padding="10dp"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    <com.ab.creatify.DrawingView
        android:id="@+id/drawingView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topToolbar"
        app:layout_constraintBottom_toTopOf="@id/bottomToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bottomToolbar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/toolbar_bg"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/toolbar_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnUndo"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="@color/toolbar_bg"
                android:contentDescription="@string/undo"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_undo" />

            <ImageButton
                android:id="@+id/btnRedo"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="@color/toolbar_bg"
                android:contentDescription="@string/redo"
                android:scaleType="centerInside"
                android:src="@drawable/ic_redo" />

            <ImageButton
                android:id="@+id/btnBrush"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="@color/toolbar_bg"
                android:contentDescription="@string/brush"
                android:scaleType="centerInside"
                android:src="@drawable/ic_brush" />

            <ImageButton
                android:id="@+id/btnEraser"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="@color/toolbar_bg"
                android:contentDescription="@string/eraser"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_eraser" />

            <ImageButton
                android:id="@+id/btnShapes"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="@color/toolbar_bg"
                android:contentDescription="@string/shapes"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_shapes" />

            <ImageButton
                android:id="@+id/btnFill"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="@color/toolbar_bg"
                android:contentDescription="@string/fill"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_fill" />

            <ImageButton
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="@color/toolbar_bg"
                android:scaleType="fitCenter"
                android:contentDescription="@string/clear"
                android:src="@drawable/ic_clear" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>