<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@android:color/white">

    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:background="#DDDDDD"
        android:backgroundTint="#DDDDDD"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brush_settings"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:textColor="#212121"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color"
        android:textSize="18sp"
        android:textColor="#757575"
        android:layout_marginBottom="8dp"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:id="@+id/colorPalette"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"/>

    </HorizontalScrollView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brush_size"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#757575"
        android:layout_marginBottom="8dp"/>

    <SeekBar
        android:id="@+id/seekBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="10"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opacity"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#757575"
        android:layout_marginBottom="8dp"/>

    <SeekBar
        android:id="@+id/seekBarOpacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="255"
        android:progress="255"
        android:layout_marginBottom="24dp"/>

</LinearLayout>